# replit_for_chrome_extension

./: .cursorules  .gitignore  README.md  package.json  plan.md  pyproject.toml  requirements.txt  run.py  scratchpad.md  tailwind.config.js
dummy_extension/: README.md  content.js  manifest.json  popup.html  popup.js
src/chrome_extension_builder/: __init__.py  main.py
src/chrome_extension_builder/api/: __init__.py  routes.py
src/chrome_extension_builder/browser/: __init__.py  event_logger.py  manager.py
src/chrome_extension_builder/chat/: __init__.py  agent.py  cli_handler.py  debug_handler.py  function_caller.py  function_executor.py  output_models.py  routes.py
src/chrome_extension_builder/codegen/: __init__.py  agent.py
src/chrome_extension_builder/models/: __init__.py  browser.py  chat.py  extension.py
src/chrome_extension_builder/static/css/: tailwind.css
src/chrome_extension_builder/static/js/: app.js
src/chrome_extension_builder/templates/: index.html
